2008-06-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/locale.h, src/locale.cpp: New OBLocale class
	to centralize calls to setlocale/uselocale. Should solve strange
	segfault on Linux with freelocale.

2008-06-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/*.cpp: Checked all files for their use of tokenize().
	All added lines are like:
	
	if (vs.size() < 1) return false; // timvdm 18/06/2008 

	* include/openbabel/obiter.h, src/obiter.cpp: Reimplement
	FOR_PAIRS_OF_MOL. Do not build a list of all pairs in the constructor,
	but find the pairs while iterating. This is faster and requires less
	memory.

	* include/openbabel/forcefield.cpp: Add SetParameterFile().

	* src/forcefields/forcefieldmmff94.*: Use the new SetParameterFile().
	Add a global definition for MMFF94s.

	* data/*: Add MMFF94s parameters.

	MMFF94s: Same functional form, only torsion and oop parameters are
	different. To see the difference, you can try to minimize alanine with
	both force fields, MMFF94s will give a planar nitrogen while MMFF94
	will not.

2008-06-17  Noel O'Boyle  <baoilleach@gmail.com>

	* Reverted r2535 except for changes to scripts/perl/Makefile.PL
	* scripts/openbabel-python.i: Updated SWIG interface file to ignore 21
	methods of each std::vector created. This should substantially reduce
	the size of the wrapper code.

2008-06-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/xtcformat.cpp: make confs a std::vector too. Was double
	*confs = new double[natoms * 3].

2008-06-16  Chris Morley

	* include/openbabel/oberror.h, src/oberror.cpp:
	add a parameter to ThrowError to allow error messages to be 
	output only once (although they are all logged.). The default
	behaviour is as at present.
	
	* src/formats/inchiformat.cpp: default output uses the "recommended"
	set of InChi options. -xn option uses no options as at present.
	
	Add -xl option to output the InChI log - only once for multiple
	molecules.
	