@@ -70,6 +70,7 @@ namespace OpenBabel
     OBAtom              *_ptr;
     OBBitVec             _notVisited;
     std::stack<OBAtom *> _stack;
+    std::vector<int>     _depth;
   public:
 
     OBMolAtomDFSIter() : _parent(NULL), _ptr(NULL) { }
@@ -89,6 +90,9 @@ namespace OpenBabel
     OBAtom* operator->() const   { return _ptr;      }
     //! \return a reference to the current atom
     OBAtom& operator*() const    { return *_ptr;     }
+    //! \return the current depth of the iterator
+    //! \since version 2.2
+    int CurrentDepth() const;
     /// \return NULL if at the last atom in a fragment, else the next atom
     OBAtom* next()
     { 
@@ -105,6 +109,7 @@ namespace OpenBabel
     OBAtom              *_ptr;
     OBBitVec             _notVisited;
     std::queue<OBAtom *> _queue;
+    std::vector<int>     _depth;
   public:
 
     OBMolAtomBFSIter(): _parent(NULL), _ptr(NULL) { }
@@ -124,6 +129,9 @@ namespace OpenBabel
     OBAtom* operator->() const   { return _ptr;      }
     //! \return a reference to the current atom
     OBAtom& operator*() const    { return *_ptr;     }
+    //! \return the current depth of the iterator
+    //! \since version 2.2
+    int CurrentDepth() const;
   };
 
   //! \brief Iterate over all bonds in an OBMol
